feat(gif): favorites endpoint
