# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\UserController;
+use App\Http\Controllers\Gif\CreateFavoriteGifController;
 use App\Http\Controllers\Gif\GetGifController;
 use App\Http\Controllers\Gif\SearchGifsController;
 use Illuminate\Support\Facades\Route;
@@ -23,6 +24,8 @@ Route::post('/auth/login', LoginController::class)->name('auth.login');
 
 Route::group(['middleware' => ['auth:api']], function () {
     Route::get('/auth/user', UserController::class)->name('auth.user');
+
+    Route::post('/gifs/favorites', CreateFavoriteGifController::class)->name('gif.favorite.create');
 
     Route::get('/gifs/search', SearchGifsController::class)->name('gif.search');
     Route::get('/gifs/{id}', GetGifController::class)->name('gif.get');
